# predicitve-dialer

./: .gitignore  Book1.xlsx  README.md  new_updated.xlsx  pyproject.toml  requirements.txt  ~$Book1.xlsx
src/predictive_dialer/: __init__.py  agents1.py  app.py  db.py  updated_leads.xlsx
